@@ -1,3 +1,9 @@
+shmuel 2024-08-17 10:06:48+03:00 - build 847
+
+1. LuaFAR:
+     Disable calling Lua handler of ProcessConsoleInput while error message is displayed.
+     See also: Mantis #3035, builds 523 and 605, Github #865.
+
 shmuel 2024-07-13 15:19:38+03:00 - build 846
 
 1. A small fix.
